--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,8 +2,8 @@ name: Run Exchange Rate Script
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 3 * * *' # Every day at 3 AM UTC
+  # schedule:
+  #   - cron: '0 3 * * *' # Every day at 3 AM UTC
 
 jobs:
   run-script:
@@ -14,7 +14,7 @@ jobs:
       SQL_PASSWORD: ${{ secrets.SQL_PASSWORD }}
       SQL_SERVER: ${{ secrets.SQL_SERVER }}
       SQL_DATABASE: ${{ secrets.SQL_DATABASE }}
-      BITRIX_URL: ${{ secrets.BITRIX_URL }}
+      # BITRIX_URL: ${{ secrets.BITRIX_URL }}
 
     steps:
       - name: Checkout repository
