--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,7 +13,8 @@ jobs:
       SQL_USER: ${{ secrets.SQL_USER }}
       SQL_PASSWORD: ${{ secrets.SQL_PASSWORD }}
       SQL_SERVER: ${{ secrets.SQL_SERVER }}
-      SQL_DATABASE: ${{ secrets.SQL_DATABASE }}
+      SQL_DATABASE: ${{ secrets.SQL_DATABASE }} 
+      SQL_PORT: ${{ secrets.SQL_PORT }}
       # BITRIX_URL: ${{ secrets.BITRIX_URL }}
 
     steps:
