--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,9 @@
 name: Run Exchange Rate Script
 
 on:
-  schedule:
-     - cron: '0 12 * * *'  # Every day at 12:00 PM UTC = 5:30 PM IST
-  # workflow_dispatch:
+  # schedule:
+  #    - cron: '0 12 * * *'  # Every day at 12:00 PM UTC = 5:30 PM IST
+  workflow_dispatch:
 
 jobs:
   run-script:
